--- a/mlp.ipynb
+++ b/mlp.ipynb
@@ -12,10 +12,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "9ffe3db6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pandas'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[13], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mplt\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpreprocessing\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m StandardScaler\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -37,11 +49,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Filtrar las columnas numéricas\n",
     "numeric_columns = df.select_dtypes(include=['number']).drop('Employee_ID',axis=1)\n",
     "\n",
-    "\n",
-    "# Si numeric_columns es un Index, conviértelo a lista\n",
     "cols = list(numeric_columns)\n",
     "\n",
     "fig, axes = plt.subplots(1, len(cols), figsize=(5 * len(cols), 4))\n",
@@ -84,17 +93,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = '@modif@'.drop('Employee_Satisfaction_Score',axis = 1)\n",
-    "y = numeric_columns.'@modif@'\n",
-    "y = y.apply(lambda x: round(x)-1) #Cambiamos la variable objetivo a 5 categorías numéricas\n",
+    "X = df.drop('Employee_Satisfaction_Score', axis=1)\n",
+    "y = df['Employee_Satisfaction_Score']\n",
+    "y = y.apply(lambda x: round(x)-1) \n",
+    "\n",
+    "categorical_cols = X.select_dtypes(include=['object', 'category']).columns\n",
+    "\n",
+    "X_encoded = pd.get_dummies(X, columns=categorical_cols)\n",
     "\n",
     "scaler = StandardScaler()\n",
-    "X_standar = scaler.'@modif@'(X)\n",
+    "X_standar = scaler.fit_transform(X_encoded)\n",
     "\n",
-    "X_train, X_test, y_train, y_test = '@modif@'(X_standar, y, test_size=0.33, random_state=42)\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_standar, y, test_size=0.33, random_state=42)\n",
     "\n",
     "y_onehot_train = tf.keras.utils.to_categorical(y_train, 5)\n",
-    "y_onehot_test = tf.keras.utils.to_categorical(y_test,5)"
+    "y_onehot_test = tf.keras.utils.to_categorical(y_test, 5)"
    ]
   },
   {
@@ -111,7 +125,32 @@
    "id": "e9dbf970",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Dense\n",
+    "\n",
+    "model_simple = Sequential(name='MLP_Simple')\n",
+    "model_simple.add(Dense(32, activation='relu', input_shape=(X_train.shape[1],)))\n",
+    "model_simple.add(Dense(5, activation='softmax'))\n",
+    "\n",
+    "model_medium = Sequential(name='MLP_Medium')\n",
+    "model_medium.add(Dense(64, activation='relu', input_shape=(X_train.shape[1],)))\n",
+    "model_medium.add(Dense(32, activation='tanh'))\n",
+    "model_medium.add(Dense(5, activation='softmax'))\n",
+    "\n",
+    "model_deep = Sequential(name='MLP_Deep')\n",
+    "model_deep.add(Dense(128, activation='relu', input_shape=(X_train.shape[1],)))\n",
+    "model_deep.add(Dense(64, activation='relu'))\n",
+    "model_deep.add(Dense(32, activation='tanh'))\n",
+    "model_deep.add(Dense(5, activation='softmax'))\n",
+    "\n",
+    "print(\"Modelo Simple:\")\n",
+    "model_simple.summary()\n",
+    "print(\"\\nModelo Medium:\")\n",
+    "model_medium.summary()\n",
+    "print(\"\\nModelo Deep:\")\n",
+    "model_deep.summary()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -119,6 +158,41 @@
    "metadata": {},
    "source": [
     "- **Actividad 3:** Compila y ajusta tus tres modelos con sus respectivos hiperparámetros."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d9813c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.optimizers import Adam, RMSprop, SGD\n",
+    "\n",
+    "model_simple.compile(optimizer=Adam(learning_rate=0.001), loss='categorical_crossentropy', metrics=['accuracy'])\n",
+    "model_medium.compile(optimizer=RMSprop(learning_rate=0.001), loss='categorical_crossentropy', metrics=['accuracy'])\n",
+    "model_deep.compile(optimizer=SGD(learning_rate=0.01), loss='categorical_crossentropy', metrics=['accuracy'])\n",
+    "\n",
+    "history_simple = model_simple.fit(\n",
+    "    X_train, y_onehot_train,\n",
+    "    epochs=30, batch_size=32,\n",
+    "    validation_data=(X_test, y_onehot_test),\n",
+    "    verbose=1\n",
+    ")\n",
+    "\n",
+    "history_medium = model_medium.fit(\n",
+    "    X_train, y_onehot_train,\n",
+    "    epochs=40, batch_size=64,\n",
+    "    validation_data=(X_test, y_onehot_test),\n",
+    "    verbose=1\n",
+    ")\n",
+    "\n",
+    "history_deep = model_deep.fit(\n",
+    "    X_train, y_onehot_train,\n",
+    "    epochs=50, batch_size=128,\n",
+    "    validation_data=(X_test, y_onehot_test),\n",
+    "    verbose=1\n",
+    ")"
    ]
   },
   {
@@ -138,7 +212,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -152,7 +226,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
